# rust-slint

./: Cargo.toml  LICENSE  README.md  ROADMAP.md  demo.webm
src/: main.rs
ui/: main.slint
