[package]
name = "rust-slint"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = { version = "1.3", default-features = false, features = ["backend-winit", "renderer-femtovg", "compat-1-2"] }
rusqlite = { version = "0.29", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
slint-build = "1.3"
